package slick.dml

case class Person(id: Int, name: String, age: Int)
